[gd_scene load_steps=5 format=3 uid="uid://c4jh52ktimaca"]

[ext_resource type="Script" uid="uid://dvrqio8rstv2n" path="res://scripts/abstract/cooking_component.gd" id="1_b34q8"]
[ext_resource type="PackedScene" uid="uid://xcq0c0utukor" path="res://scenes/gui/cooking_gui.tscn" id="2_d1q4w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_trh2x"]
size = Vector2(70, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m60nv"]
size = Vector2(42, 15)

[node name="CookingComponent" type="Node2D"]
script = ExtResource("1_b34q8")

[node name="InteractableZone" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableZone"]
position = Vector2(0, 14)
shape = SubResource("RectangleShape2D_trh2x")
debug_color = Color(0.0332314, 0.525908, 1, 0.42)

[node name="Cook" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.0
offset_top = -18.0
offset_right = 17.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(7, 7)
theme_override_colors/font_color = Color(0.2295, 0.81, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 10
text = "Cook
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClickToCook" type="Area2D" parent="Cook"]
position = Vector2(17, 7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cook/ClickToCook"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_m60nv")

[node name="CookingGUI" parent="Cook" instance=ExtResource("2_d1q4w")]
offset_left = 17.0
offset_top = 13.0
offset_right = 17.0
offset_bottom = 13.0

[connection signal="body_entered" from="InteractableZone" to="." method="_on_interactable_zone_body_entered"]
[connection signal="body_exited" from="InteractableZone" to="." method="_on_interactable_zone_body_exited"]
[connection signal="mouse_entered" from="Cook/ClickToCook" to="." method="_on_click_to_trade_mouse_entered"]
[connection signal="mouse_exited" from="Cook/ClickToCook" to="." method="_on_click_to_trade_mouse_exited"]
